--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -16,6 +16,10 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
+  "paths": {
+    "@/*": ["./src/*"],
+    "@/components/*": ["./src/components/*"],
+  },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
