--- a/front/package.json
+++ b/front/package.json
@@ -12,11 +12,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2",
-    "yup": "^1.1.1"
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
