Feat : Ready for pr (no smiley sorry)
I don't know how to make smileys from windows :'(

--- a/.env_sample
+++ b/.env_sample
@@ -11,4 +11,7 @@ EXAMPLE_VAR="Default content"
 # Real example of use with the docker-compose.yml
 
 POSTGRESQL_PASSWORD=local
-POSTGRESQL_POSTGRES_PASSWORD=localroot
+
+# This is the acces URL from outside the container.
+
+DATABASE_URL="postgresql://dev:local@localhost:5432/db?schema=public"
