--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     restart: unless-stopped
     volumes:
       - ./nginx/reverse_proxy.conf:/etc/nginx/conf.d/default.conf:ro
-    command: [nginx-debug, "-g daemon off;"]
+    command: ["nginx-debug", "-g", "daemon off;"]
     ports:
       - "80:80"
     depends_on:
