--- a/back/package.json
+++ b/back/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mapped-types": "^1.2.2",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.14.1",
     "pg": "^8.11.0",
