--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -16,8 +16,13 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@/*": ["./src/*"],
+      "@shared/*": ["./shared/*"]
+    }
   },
+  "include": ["src", "shared"],
   "watchOptions": {
     // Use native file system events for files and directories
     "watchFile": "priorityPollingInterval",
