--- a/front/package.json
+++ b/front/package.json
@@ -12,11 +12,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.11.2",
-    "yup": "^1.1.1"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
