--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -19,6 +19,7 @@
   "paths": {
     "@/*": ["./src/*"],
     "@/components/*": ["./src/components/*"],
+    "@/types/*": ["./src/types/*"],
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
