--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
+    "@tanstack/react-query": "^4.29.12",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
