--- a/front/package.json
+++ b/front/package.json
@@ -15,14 +15,17 @@
     "@hookform/resolvers": "^3.1.0",
     "@tanstack/react-query": "^4.29.12",
     "axios": "^1.4.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.11.2",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
