--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -4,7 +4,7 @@
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
-    "skipLibCheck": false,
+    "skipLibCheck": true,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
@@ -18,7 +18,7 @@
   },
   "paths": {
     "@/*": ["./src/*"],
-    "@/components/*": ["./src/components/*"],
+    "@/components/*": ["./src/components/*"]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
